WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118742
Missing break in WebGLRenderingContext::validateCompressedTexFuncData()
https://bugs.webkit.org/show_bug.cgi?id=118742
Summary
Missing break in WebGLRenderingContext::validateCompressedTexFuncData()
Pratik Solanki
Reported
2013-07-16 11:22:09 PDT
WebGLRenderingContext::validateCompressedTexFuncData() has this code case Extensions3D::COMPRESSED_ATC_RGBA_EXPLICIT_ALPHA_AMD: case Extensions3D::COMPRESSED_ATC_RGBA_INTERPOLATED_ALPHA_AMD: { bytesRequired = floor(static_cast<double>((width + 3) / 4)) * floor(static_cast<double>((height + 3) / 4)) * 16; } case Extensions3D::COMPRESSED_RGB_PVRTC_4BPPV1_IMG: case Extensions3D::COMPRESSED_RGBA_PVRTC_4BPPV1_IMG: { bytesRequired = max(width, 8) * max(height, 8) / 2; } break; It's missing a break for COMPRESSED_ATC_RGBA_EXPLICIT_ALPHA_AMD and COMPRESSED_ATC_RGBA_INTERPOLATED_ALPHA_AMD case.
Attachments
Patch
(1.45 KB, patch)
2013-07-16 11:24 PDT
,
Pratik Solanki
rniwa
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion
(602.53 KB, application/zip)
2013-07-16 12:16 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2013-07-16 11:24:36 PDT
Created
attachment 206800
[details]
Patch
Build Bot
Comment 2
2013-07-16 12:16:01 PDT
Comment on
attachment 206800
[details]
Patch
Attachment 206800
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1090299
New failing tests: fullscreen/full-screen-iframe-with-max-width-height.html
Build Bot
Comment 3
2013-07-16 12:16:02 PDT
Created
attachment 206805
[details]
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Pratik Solanki
Comment 4
2013-07-16 17:29:06 PDT
The test fails for me with and without my patch so the patch isn't causing this failure.
Pratik Solanki
Comment 5
2013-07-16 17:33:07 PDT
Committed
r152750
: <
http://trac.webkit.org/changeset/152750
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug