Missing break in WebGLRenderingContext::validateCompressedTexFuncData() https://bugs.webkit.org/show_bug.cgi?id=118742

Reviewed by Ryosuke Niwa.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::validateCompressedTexFuncData):

Canonical link: https://commits.webkit.org/136632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152750 268f45cc-cd09-0410-ab3c-d52691b4dbfc